model training testing

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -1554,6 +1554,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Random Forest model works better as a baseline model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
