flask frontend and predict pipeline

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
        "[1700 rows x 21 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1243,7 @@
        "(1700, 21)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
        "[1700 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
        "(1700, 3)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1431,7 @@
        "        0.5       ]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1483,12 +1483,19 @@
       "- R2 Score: 1.0000\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 0.2203\n",
-      "- Mean Absolute Error: 0.0485\n",
-      "- R2 Score: 0.6229\n",
+      "- Root Mean Squared Error: 0.2238\n",
+      "- Mean Absolute Error: 0.0501\n",
+      "- R2 Score: 0.6184\n",
       "===================================\n",
       "\n",
       "\n",
+      "[[1 0 0]\n",
+      " [1 0 0]\n",
+      " [1 0 0]\n",
+      " ...\n",
+      " [1 0 0]\n",
+      " [1 0 0]\n",
+      " [0 1 0]]\n",
       "Random Forest Classifier\n",
       "Model performance for Training set\n",
       "- Root Mean Squared Error: 0.0000\n",
@@ -1496,12 +1503,19 @@
       "- R2 Score: 1.0000\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 0.1958\n",
-      "- Mean Absolute Error: 0.0383\n",
-      "- R2 Score: 0.6949\n",
+      "- Root Mean Squared Error: 0.1791\n",
+      "- Mean Absolute Error: 0.0321\n",
+      "- R2 Score: 0.7362\n",
       "===================================\n",
       "\n",
-      "\n"
+      "\n",
+      "[[1 0 0]\n",
+      " [1 0 0]\n",
+      " [1 0 0]\n",
+      " ...\n",
+      " [1 0 0]\n",
+      " [1 0 0]\n",
+      " [1 0 0]]\n"
      ]
     }
    ],
@@ -1548,7 +1562,8 @@
     "  r2_list.append(model_test_r2)\n",
     "  \n",
     "  print('='*35)\n",
-    "  print('\\n')"
+    "  print('\\n')\n",
+    "  print(y_test_pred)"
    ]
   },
   {
